--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -153,7 +153,7 @@ td.print5,
 
 ul li span {
   display: inline-block;
-  width: 4em;
+  width: 5em;
   text-align: center;
 }
 
@@ -169,6 +169,8 @@ ul li span {
 
 .red {
   background-color: #F00 !important;
+  color: #FFF;
+  font-weight: bold;
 }
 
 .input-no {
